--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "parcel src/index.html",
-    "prod": "parcel build index.html",
-    "prueba": "console.log('hola')"
+    "dev": "parcel src/splash.html",
+    "prod": "parcel build index.html"
   },
   "repository": {
     "type": "git",
