--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "jayim",
   "version": "1.0.0",
-  "description": "",
+  "description": "El presente proyecto consiste en el desarrollo de una aplicación movil de carácter híbrido, que tiene como objetivo preliminar el de gestionar aspectos médicos del usuario, como lo son el agendamiento de citas y medicamentos para su recordatorio. Adicional a esto, el usuario tiene un perfil con una lista de posibles patologías que puede asociar para sí.",
   "main": "index.js",
   "scripts": {
-    "dev": "parcel src/splash.html",
+    "dev": "parcel src/index.html",
     "prod": "parcel build index.html"
   },
   "repository": {
@@ -19,6 +19,366 @@
   },
   "homepage": "https://github.com/018monroz/Jayim#readme",
   "devDependencies": {
+    "dart-sass": "^1.25.0",
+    "gulp": "^4.0.2",
+    "gulp-concat": "^2.6.1",
+    "gulp-uglify-es": "^3.0.0",
     "parcel": "^2.8.3"
+  },
+  "dependencies": {
+    "abortcontroller-polyfill": "^1.7.5",
+    "acorn": "^8.8.2",
+    "ansi-colors": "^1.1.0",
+    "ansi-gray": "^0.1.1",
+    "ansi-regex": "^2.1.1",
+    "ansi-styles": "^4.3.0",
+    "ansi-wrap": "^0.1.0",
+    "anymatch": "^2.0.0",
+    "append-buffer": "^1.0.2",
+    "archy": "^1.0.0",
+    "arr-diff": "^4.0.0",
+    "arr-filter": "^1.1.2",
+    "arr-flatten": "^1.1.0",
+    "arr-map": "^2.0.2",
+    "arr-union": "^3.1.0",
+    "array-each": "^1.0.1",
+    "array-initial": "^1.1.0",
+    "array-last": "^1.3.0",
+    "array-slice": "^1.1.0",
+    "array-sort": "^1.0.0",
+    "array-unique": "^0.3.2",
+    "assign-symbols": "^1.0.0",
+    "async-done": "^1.3.2",
+    "async-each": "^1.0.6",
+    "async-settle": "^1.0.0",
+    "atob": "^2.1.2",
+    "bach": "^1.2.0",
+    "balanced-match": "^1.0.2",
+    "base": "^0.11.2",
+    "base-x": "^3.0.9",
+    "binary-extensions": "^1.13.1",
+    "boolbase": "^1.0.0",
+    "brace-expansion": "^1.1.11",
+    "braces": "^3.0.2",
+    "browserslist": "^4.21.5",
+    "buffer-equal": "^1.0.1",
+    "buffer-from": "^1.1.2",
+    "cache-base": "^1.0.1",
+    "call-bind": "^1.0.2",
+    "callsites": "^3.1.0",
+    "camelcase": "^3.0.0",
+    "caniuse-lite": "^1.0.30001458",
+    "chalk": "^4.1.2",
+    "chokidar": "^2.1.8",
+    "chrome-trace-event": "^1.0.3",
+    "class-utils": "^0.3.6",
+    "cliui": "^3.2.0",
+    "clone": "^2.1.2",
+    "clone-buffer": "^1.0.0",
+    "clone-stats": "^1.0.0",
+    "cloneable-readable": "^1.1.3",
+    "code-point-at": "^1.1.0",
+    "collection-map": "^1.0.0",
+    "collection-visit": "^1.0.0",
+    "color-convert": "^2.0.1",
+    "color-name": "^1.1.4",
+    "color-support": "^1.1.3",
+    "commander": "^7.2.0",
+    "component-emitter": "^1.3.0",
+    "concat-map": "^0.0.1",
+    "concat-stream": "^1.6.2",
+    "convert-source-map": "^1.9.0",
+    "copy-descriptor": "^0.1.1",
+    "copy-props": "^2.0.5",
+    "core-util-is": "^1.0.3",
+    "cosmiconfig": "^7.1.0",
+    "css-select": "^4.3.0",
+    "css-tree": "^1.1.3",
+    "css-what": "^6.1.0",
+    "csso": "^4.2.0",
+    "d": "^1.0.1",
+    "debug": "^2.6.9",
+    "decamelize": "^1.2.0",
+    "decode-uri-component": "^0.2.2",
+    "default-compare": "^1.0.0",
+    "default-resolution": "^2.0.0",
+    "define-properties": "^1.2.0",
+    "define-property": "^2.0.2",
+    "detect-file": "^1.0.0",
+    "detect-libc": "^1.0.3",
+    "dom-serializer": "^1.4.1",
+    "domelementtype": "^2.3.0",
+    "domhandler": "^4.3.1",
+    "domutils": "^2.8.0",
+    "dotenv": "^7.0.0",
+    "dotenv-expand": "^5.1.0",
+    "duplexify": "^3.7.1",
+    "each-props": "^1.3.2",
+    "electron-to-chromium": "^1.4.311",
+    "end-of-stream": "^1.4.4",
+    "entities": "^3.0.1",
+    "error-ex": "^1.3.2",
+    "es5-ext": "^0.10.62",
+    "es6-iterator": "^2.0.3",
+    "es6-symbol": "^3.1.3",
+    "es6-weak-map": "^2.0.3",
+    "escalade": "^3.1.1",
+    "escape-string-regexp": "^1.0.5",
+    "expand-brackets": "^2.1.4",
+    "expand-tilde": "^2.0.2",
+    "ext": "^1.7.0",
+    "extend": "^3.0.2",
+    "extend-shallow": "^3.0.2",
+    "extglob": "^2.0.4",
+    "fancy-log": "^1.3.3",
+    "fast-levenshtein": "^1.1.4",
+    "fill-range": "^7.0.1",
+    "find-up": "^1.1.2",
+    "findup-sync": "^3.0.0",
+    "fined": "^1.2.0",
+    "flagged-respawn": "^1.0.1",
+    "flush-write-stream": "^1.1.1",
+    "for-in": "^1.0.2",
+    "for-own": "^1.0.0",
+    "fragment-cache": "^0.2.1",
+    "fs-mkdirp-stream": "^1.0.0",
+    "fs.realpath": "^1.0.0",
+    "function-bind": "^1.1.1",
+    "get-caller-file": "^1.0.3",
+    "get-intrinsic": "^1.2.0",
+    "get-port": "^4.2.0",
+    "get-value": "^2.0.6",
+    "glob": "^7.2.3",
+    "glob-parent": "^3.1.0",
+    "glob-stream": "^6.1.0",
+    "glob-watcher": "^5.0.5",
+    "global-modules": "^1.0.0",
+    "global-prefix": "^1.0.2",
+    "globals": "^13.20.0",
+    "glogg": "^1.0.2",
+    "graceful-fs": "^4.2.10",
+    "gulp-cli": "^2.3.0",
+    "gulplog": "^1.0.0",
+    "has": "^1.0.3",
+    "has-flag": "^4.0.0",
+    "has-property-descriptors": "^1.0.0",
+    "has-symbols": "^1.0.3",
+    "has-value": "^1.0.0",
+    "has-values": "^1.0.0",
+    "homedir-polyfill": "^1.0.3",
+    "hosted-git-info": "^2.8.9",
+    "htmlnano": "^2.0.3",
+    "htmlparser2": "^7.2.0",
+    "import-fresh": "^3.3.0",
+    "inflight": "^1.0.6",
+    "inherits": "^2.0.4",
+    "ini": "^1.3.8",
+    "interpret": "^1.4.0",
+    "invert-kv": "^1.0.0",
+    "is-absolute": "^1.0.0",
+    "is-accessor-descriptor": "^1.0.0",
+    "is-arrayish": "^0.2.1",
+    "is-binary-path": "^1.0.1",
+    "is-buffer": "^1.1.6",
+    "is-core-module": "^2.11.0",
+    "is-data-descriptor": "^1.0.0",
+    "is-descriptor": "^1.0.2",
+    "is-extendable": "^1.0.1",
+    "is-extglob": "^2.1.1",
+    "is-fullwidth-code-point": "^1.0.0",
+    "is-glob": "^4.0.3",
+    "is-json": "^2.0.1",
+    "is-negated-glob": "^1.0.0",
+    "is-number": "^7.0.0",
+    "is-plain-object": "^5.0.0",
+    "is-relative": "^1.0.0",
+    "is-unc-path": "^1.0.0",
+    "is-utf8": "^0.2.1",
+    "is-valid-glob": "^1.0.0",
+    "is-windows": "^1.0.2",
+    "isarray": "^1.0.0",
+    "isexe": "^2.0.0",
+    "isobject": "^3.0.1",
+    "js-tokens": "^4.0.0",
+    "json-parse-even-better-errors": "^2.3.1",
+    "json-stable-stringify-without-jsonify": "^1.0.1",
+    "json5": "^2.2.3",
+    "just-debounce": "^1.1.0",
+    "kind-of": "^5.1.0",
+    "last-run": "^1.1.1",
+    "lazystream": "^1.0.1",
+    "lcid": "^1.0.0",
+    "lead": "^1.0.0",
+    "liftoff": "^3.1.0",
+    "lightningcss": "^1.19.0",
+    "lightningcss-win32-x64-msvc": "^1.19.0",
+    "lines-and-columns": "^1.2.4",
+    "lmdb": "^2.5.2",
+    "load-json-file": "^1.1.0",
+    "make-iterator": "^1.0.1",
+    "map-cache": "^0.2.2",
+    "map-visit": "^1.0.0",
+    "matchdep": "^2.0.0",
+    "mdn-data": "^2.0.14",
+    "micromatch": "^4.0.5",
+    "minimatch": "^3.1.2",
+    "mixin-deep": "^1.3.2",
+    "ms": "^2.0.0",
+    "msgpackr": "^1.8.3",
+    "msgpackr-extract": "^3.0.0",
+    "mute-stdout": "^1.0.1",
+    "nanomatch": "^1.2.13",
+    "next-tick": "^1.1.0",
+    "node-addon-api": "^3.2.1",
+    "node-gyp-build": "^4.6.0",
+    "node-gyp-build-optional-packages": "^5.0.3",
+    "node-releases": "^2.0.10",
+    "normalize-package-data": "^2.5.0",
+    "normalize-path": "^3.0.0",
+    "now-and-later": "^2.0.1",
+    "nth-check": "^2.1.1",
+    "nullthrows": "^1.1.1",
+    "number-is-nan": "^1.0.1",
+    "object-copy": "^0.1.0",
+    "object-keys": "^1.1.1",
+    "object-visit": "^1.0.1",
+    "object.assign": "^4.1.4",
+    "object.defaults": "^1.1.0",
+    "object.map": "^1.0.1",
+    "object.pick": "^1.3.0",
+    "object.reduce": "^1.0.1",
+    "once": "^1.4.0",
+    "ordered-binary": "^1.4.0",
+    "ordered-read-streams": "^1.0.1",
+    "os-locale": "^1.4.0",
+    "parent-module": "^1.0.1",
+    "parse-filepath": "^1.0.2",
+    "parse-json": "^5.2.0",
+    "parse-node-version": "^1.0.1",
+    "parse-passwd": "^1.0.0",
+    "pascalcase": "^0.1.1",
+    "path-dirname": "^1.0.2",
+    "path-exists": "^2.1.0",
+    "path-is-absolute": "^1.0.1",
+    "path-parse": "^1.0.7",
+    "path-root": "^0.1.1",
+    "path-root-regex": "^0.1.2",
+    "path-type": "^4.0.0",
+    "picocolors": "^1.0.0",
+    "picomatch": "^2.3.1",
+    "pify": "^2.3.0",
+    "pinkie": "^2.0.4",
+    "pinkie-promise": "^2.0.1",
+    "posix-character-classes": "^0.1.1",
+    "postcss-value-parser": "^4.2.0",
+    "posthtml": "^0.16.6",
+    "posthtml-parser": "^0.10.2",
+    "posthtml-render": "^3.0.0",
+    "pretty-hrtime": "^1.0.3",
+    "process-nextick-args": "^2.0.1",
+    "pump": "^2.0.1",
+    "pumpify": "^1.5.1",
+    "react-error-overlay": "^6.0.9",
+    "react-refresh": "^0.9.0",
+    "read-pkg": "^1.1.0",
+    "read-pkg-up": "^1.0.1",
+    "readable-stream": "^2.3.8",
+    "readdirp": "^2.2.1",
+    "rechoir": "^0.6.2",
+    "regenerator-runtime": "^0.13.11",
+    "regex-not": "^1.0.2",
+    "remove-bom-buffer": "^3.0.0",
+    "remove-bom-stream": "^1.2.0",
+    "remove-trailing-separator": "^1.1.0",
+    "repeat-element": "^1.1.4",
+    "repeat-string": "^1.6.1",
+    "replace-ext": "^1.0.1",
+    "replace-homedir": "^1.0.0",
+    "require-directory": "^2.1.1",
+    "require-main-filename": "^1.0.1",
+    "resolve": "^1.22.1",
+    "resolve-dir": "^1.0.1",
+    "resolve-from": "^4.0.0",
+    "resolve-options": "^1.1.0",
+    "resolve-url": "^0.2.1",
+    "ret": "^0.1.15",
+    "safe-buffer": "^5.2.1",
+    "safe-regex": "^1.1.0",
+    "semver": "^5.7.1",
+    "semver-greatest-satisfied-range": "^1.1.0",
+    "set-blocking": "^2.0.0",
+    "set-value": "^2.0.1",
+    "snapdragon": "^0.8.2",
+    "snapdragon-node": "^2.1.1",
+    "snapdragon-util": "^3.0.1",
+    "source-map": "^0.6.1",
+    "source-map-resolve": "^0.5.3",
+    "source-map-support": "^0.5.21",
+    "source-map-url": "^0.4.1",
+    "sparkles": "^1.0.1",
+    "spdx-correct": "^3.1.1",
+    "spdx-exceptions": "^2.3.0",
+    "spdx-expression-parse": "^3.0.1",
+    "spdx-license-ids": "^3.0.12",
+    "split-string": "^3.1.0",
+    "srcset": "^4.0.0",
+    "stable": "^0.1.8",
+    "stack-trace": "^0.0.10",
+    "static-extend": "^0.1.2",
+    "stream-exhaust": "^1.0.2",
+    "stream-shift": "^1.0.1",
+    "string_decoder": "^1.1.1",
+    "string-width": "^1.0.2",
+    "strip-ansi": "^3.0.1",
+    "strip-bom": "^2.0.0",
+    "supports-color": "^7.2.0",
+    "supports-preserve-symlinks-flag": "^1.0.0",
+    "sver-compat": "^1.5.0",
+    "svgo": "^2.8.0",
+    "term-size": "^2.2.1",
+    "terser": "^5.16.5",
+    "through2": "^2.0.5",
+    "through2-filter": "^3.0.0",
+    "time-stamp": "^1.1.0",
+    "timsort": "^0.3.0",
+    "to-absolute-glob": "^2.0.2",
+    "to-object-path": "^0.3.0",
+    "to-regex": "^3.0.2",
+    "to-regex-range": "^5.0.1",
+    "to-through": "^2.0.0",
+    "tslib": "^2.5.0",
+    "type": "^1.2.0",
+    "type-fest": "^0.20.2",
+    "typedarray": "^0.0.6",
+    "unc-path-regex": "^0.1.2",
+    "undertaker": "^1.3.0",
+    "undertaker-registry": "^1.0.1",
+    "union-value": "^1.0.1",
+    "unique-stream": "^2.3.1",
+    "unset-value": "^1.0.0",
+    "upath": "^1.2.0",
+    "update-browserslist-db": "^1.0.10",
+    "urix": "^0.1.0",
+    "use": "^3.1.1",
+    "util-deprecate": "^1.0.2",
+    "utility-types": "^3.10.0",
+    "v8-compile-cache": "^2.3.0",
+    "v8flags": "^3.2.0",
+    "validate-npm-package-license": "^3.0.4",
+    "value-or-function": "^3.0.0",
+    "vinyl": "^2.2.1",
+    "vinyl-fs": "^3.0.3",
+    "vinyl-sourcemap": "^1.1.0",
+    "weak-lru-cache": "^1.2.2",
+    "which": "^1.3.1",
+    "which-module": "^1.0.0",
+    "wrap-ansi": "^2.1.0",
+    "wrappy": "^1.0.2",
+    "xtend": "^4.0.2",
+    "xxhash-wasm": "^0.4.2",
+    "y18n": "^3.2.2",
+    "yaml": "^1.10.2",
+    "yargs": "^7.1.2",
+    "yargs-parser": "^5.0.1"
   }
 }
